--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./public/js/jquery.js"></script>
-    <script src="./public/js/plugins.js"></script>
-    <script src="./public/js/init.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/init.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
