import css at main.js

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     />
 
     <!-- <link rel="stylesheet" type="text/css" href="../css/plugins.css" /> -->
-    <link rel="stylesheet" type="text/css" href="/src/css/plugins.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/src/css/plugins.css" />
     <link rel="stylesheet" type="text/css" href="/src/css/colors.css" />
     <link rel="stylesheet" type="text/css" href="/src/css/darkMode.css" />
-    <link rel="stylesheet" type="text/css" href="/src/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/src/css/style.css" /> -->
   </head>
   <body>
     <div id="app"></div>
