--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/png" href="./public/img/favicon.png" />
+    <link rel="icon" type="image/png" href="./img/favicon.png" />
 
     <meta name="description" content="Fajar Ika Saputra | Portfolio" />
     <meta name="author" content="Fajar Ika Saputra" />
